way to update project into running form .py files. Included requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,16 @@
 ehthumbs.db
 Thumbs.db
 
+# Environments #
+################
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # My Ignore #
 #############
 .ipynb_checkpoints
