repaired training utility, now able to train with losses around 0.5. Added balance WD classes 50/50

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,16 @@
 *.xlsx
 *.nc
 
+# Image files #
+##############
+*.pdf
+*.svg
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.bmp
+
 # OS generated files #
 ######################
 .DS_Store
