set up preliminary file system for packaging

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,10 @@
 ehthumbs.db
 Thumbs.db
 
+# IDE and editor files #
+########################
+.vscode/
+
 # Environments #
 ################
 .env
